--- a/GdeWebAPI/appsettings.json
+++ b/GdeWebAPI/appsettings.json
@@ -26,5 +26,5 @@
   //"websiteUrl": "https://eduai.omegacode.cloud",
   //"apiUrl": "https://eduaiapi.omegacode.cloud"
   "websiteUrl": "https://localhost:7294",
-  "apiUrl": "https://localhost:7046"
+  "apiUrl": "http://localhost:5015"
 }
