--- a/GdeWeb/appsettings.json
+++ b/GdeWeb/appsettings.json
@@ -9,5 +9,5 @@
   //"websiteUrl": "https://eduai.omegacode.cloud",
   //"apiUrl": "https://eduaiapi.omegacode.cloud"
   "websiteUrl": "https://localhost:7294",
-  "apiUrl": "https://localhost:7046"
+  "apiUrl": "http://localhost:5015"
 }
