--- a/GdeWebAPI/appsettings.json
+++ b/GdeWebAPI/appsettings.json
@@ -14,7 +14,7 @@
   },
   "ContactMail": "jakab.d@gmail.com",
   "OpenAI": {
-    "ApiKey": ""
+    "ApiKey": "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"
   },
   "Logging": {
     "LogLevel": {
